# demo

./: docker-compose.yml
demo-drf/: Dockerfile  db.sqlite3  pyproject.toml
demo-drf/demo_drf/: asgi.py  settings.py  urls.py  wsgi.py
demo-drf/todo/: models.py  serializer.py  views.py
demo-drf/todo/migrations/: 0001_initial.py  0002_alter_todoitemmodel_id.py  0003_todoitemmodel_completed.py
demo-next/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
demo-next/src/app/: page.tsx  todoCard.tsx
demo-proxy/: nginx.conf
